--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "prospect-agent",
+  "name": "transparent-partners-prospecting-agent",
   "version": "0.1.0",
   "private": true,
   "scripts": {
