--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "next": "14.2.0",
     "react": "^18",
     "react-dom": "^18",
-    "openai": "^4.0.0"
+    "@anthropic-ai/sdk": "^0.30.1"
   },
   "devDependencies": {
     "@types/node": "^20",
